# Identical-Files-Finder

./: .gitignore  LICENSE  README.md
IdenticalFilesFinder/: CMakeLists.txt  Config.json
IdenticalFilesFinder/Source/: Main.cpp
IdenticalFilesFinder/Source/Private/: ConfigOptions.cpp  FileParser.cpp  FileWrapper.cpp
IdenticalFilesFinder/Source/Public/: ConfigOptions.h  FileParser.h  FileWrapper.h
